<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".SendMoneyPage">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/project_font_medium"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/send_money"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/recipientAccountNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recipient_account_number"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipientAccountNoTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipientAccountNo"
        app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipientAccountNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_account_number_to_transfer_to"
                android:inputType="number"
                app:boxStrokeColor="@color/project_color"/>

        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/recipientBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recipient_bank"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/recipientAccountNoTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipientBankTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/grey"
        android:alpha="0.4"
        app:layout_constraintTop_toBottomOf="@id/recipientBank"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipientBankEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_drop_down"
            android:text="@string/wema_bank"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            app:boxStrokeColor="@color/project_color"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/amountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/recipientBankTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/amountText"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount_to_transfer"
            android:inputType="number"
            app:boxStrokeColor="@color/project_color"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendMoneyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/send_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountTextLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>