<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectedBankPage">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/project_font_medium"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/bank_details"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <include
        layout="@layout/selected_bank_card_layout"
        android:id="@+id/accountCard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/accountCard"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/sendMoneyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:drawableTint="@color/white"
            android:drawableTop="@drawable/ic_send_money"
            android:layout_height="match_parent"
            android:text="@string/send_money_db_line"
            android:paddingVertical="10dp"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/buyAirtimeButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="5dp"
            android:drawableTint="@color/white"
            android:drawableTop="@drawable/ic_buy_airtime"
            android:layout_height="match_parent"
            android:text="@string/buy_airtime_db_line"
            android:paddingVertical="10dp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/transactionsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/project_font_medium"
        android:text="@string/transactions"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"/>

    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>