<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HomePage">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/appLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tabName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/project_font_medium"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/title_home"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toEndOf="@id/appLogo"
        app:layout_constraintTop_toTopOf="@id/appLogo" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/tabName"
        app:layout_constraintBottom_toBottomOf="@id/tabName"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/yourAccountsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/project_font_medium"
        android:text="@string/your_accounts"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo"/>

    <TextView
        android:id="@+id/yourAccountsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/project_font_regular"
        android:text="@string/your_account_info"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourAccountsHeading" />

    <Button
        android:id="@+id/addAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourAccountsInfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userAccountsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/addAccountButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>